--- a/frontend/src/app/nav/nav.component.html
+++ b/frontend/src/app/nav/nav.component.html
@@ -5,9 +5,9 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="/">Home</a>
+      <a mat-list-item routerLink="/table">Tabelle</a>
+      <a mat-list-item routerLink="/table/id">11. Datensatz</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -23,5 +23,12 @@
       <span>frontend</span>
     </mat-toolbar>
     <!-- Add Content Here -->
+
+<!--    <h1>This is nav-Content</h1>-->
+<!--    <mat-slider min="1" max="100" step="1" value="1"></mat-slider>-->
+<!--    <jm-table></jm-table> gelöscht-->
+    <router-outlet></router-outlet>
+
+    <!-- end of nav-Content -->
   </mat-sidenav-content>
 </mat-sidenav-container>
