--- a/frontend3/src/app/members/create/create.component.html
+++ b/frontend3/src/app/members/create/create.component.html
@@ -1,1 +1,33 @@
-<p>create works!</p>
+<div class="container">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <div class="form-group row">
+      <label for="inputFirstName" class="col-sm-2 col-form-label">First Name</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" formControlName="firstNameControl" id="inputFirstName">
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="inputLastName" class="col-sm-2 col-form-label">Last Name</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" formControlName="lastNameControl" id="inputLastName">
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="inputEmail" class="col-sm-2 col-form-label">E-Mail</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" formControlName="emailControl" id="inputEmail">
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <div class="col-sm-6">
+        <button type="submit" class="btn btn-primary btn-block" [disabled]="!form.valid">Create</button>
+      </div>
+      <div class="col-sm-6">
+        <button type="cancel" class="btn btn-secondary btn-block" (click)="cancel()">Cancel</button>
+      </div>
+    </div>
+  </form>
+</div>
