--- a/frontend3/src/app/members/read/read.component.html
+++ b/frontend3/src/app/members/read/read.component.html
@@ -9,6 +9,7 @@
       <th>Nachname</th>
       <th>E-Mail</th>
       <th>Edit</th>
+      <th>Delete</th>
     </tr>
     </thead>
     <tbody>
@@ -24,6 +25,13 @@
           width="1em"
           height="1em">
         </i-bs></a></td>
+      <td><i-bs
+        name="trash"
+        class="text-secondary"
+        width="1em"
+        height="1em"
+        (click)="open(content, member.id)">
+      </i-bs></td>
     </tr>
     </tbody>
   </table>
@@ -40,3 +48,46 @@
   </div>
 </div>
 
+<!-- modaler Dialog fuer das Loeschen -->
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Confirm delete</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.close('cancel')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <h4 style="color: red">Do you really want to delete this data set?</h4>
+    <form [formGroup]="form">
+      <div class="form-group">
+        <label for="inpId">id</label>
+        <div class="input-group">
+          <input id="inpId" class="form-control" formControlName="idControl" value="{{ member?.id }}" readonly>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inpFN">firstname</label>
+        <div class="input-group">
+          <input id="inpFN" class="form-control" formControlName="firstNameControl" value="{{ member?.firstname }}" readonly>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inpLN">lastname</label>
+        <div class="input-group">
+          <input id="inpLN" class="form-control" formControlName="lastNameControl" value="{{ member?.lastname }}" readonly>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inpEmail">email</label>
+        <div class="input-group">
+          <input id="inpEmail" class="form-control" formControlName="emailControl" value="{{ member?.email }}" readonly>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="modal.close('cancel')">Cancel</button>
+    <button type="button" class="btn btn-primary" (click)="modal.close('delete')">Delete</button>
+  </div>
+</ng-template>
