--- a/frontend4/src/app/games/home/home.component.html
+++ b/frontend4/src/app/games/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="home">
+  <h3>Welche Games sollte ich in naher Zukunft spielen?</h3>
+  <div>
+    Die "Pile of Games"-Datenbank soll diese Frage beantworten!<br>
+    Eine Liste meiner (erfassten) Spiele findet sich unter "Anzeigen & Bearbeiten".
+    Dort können vorhandene Einträge - wie der Name schon sagt ;) - auch bearbeitet
+    sowie gelöscht werden. Neue Datensätze werden unter "Anlegen" erstellt.
+  </div>
+</div>
