--- a/frontend4/src/app/app.component.html
+++ b/frontend4/src/app/app.component.html
@@ -1,7 +1,1 @@
-<h1>This is app</h1>
-<ul>
-  <li><a [routerLink]="['/home']">Home</a> </li>
-  <li><a [routerLink]="['/create']">Anlegen</a> </li>
-  <li><a [routerLink]="['/edit']">Lesen & Bearbeiten</a> </li>
-</ul>
-<router-outlet></router-outlet>
+<app-nav></app-nav>
